--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -134,7 +134,7 @@ jobs:
         # python run_page/garmin_sync.py ${{ secrets.GARMIN_SECRET_STRING }} --only-run
 
       - name: Run sync Garmin CN script
-        # if: env.RUN_TYPE == 'garmin_cn'
+        if: env.RUN_TYPE == 'garmin_cn'
         run: |
           python run_page/garmin_sync.py ${{ secrets.GARMIN_SECRET_STRING_CN }} --is-cn
         # make garmin secret string 'python run_page/get_garmin_secret.py ${email} ${password} --is-cn'
